--- a/Home/Tpl/Public/base.html
+++ b/Home/Tpl/Public/base.html
@@ -4,13 +4,14 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	    <link rel="stylesheet" href="__PUBLIC__/bootstrap-3.3.7-dist/css/bootstrap-theme.css" />
 	    <link rel="stylesheet" href="__PUBLIC__/bootstrap-3.3.7-dist/css/bootstrap.css" />
-		<link rel="shortcut icon" href="__PUBLIC__/img/onecode.png" type="image/x-icon" />
+		<!--<link rel="shortcut icon" href="__PUBLIC__/img/onecode.png" type="image/x-icon" />-->
+		<link rel="shortcut icon" href="https://hi.codemao.cn/favicon.ico">
 		<block name="css"></block>
 		<script language="javascript" src="__PUBLIC__/bootstrap-3.3.7-dist/js/jquery-1.12.2.min.js"></script>
 		<script language="javascript" src="__PUBLIC__/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 		<block name="js"></block>
 		<title>
-			<block name="title">一码学程</block>
+			<block name="title">编程猫</block>
 		</title>
 	</head>	
 	<body>
