--- a/Home/Tpl/Train/showCourseIndexPage.html
+++ b/Home/Tpl/Train/showCourseIndexPage.html
@@ -46,13 +46,13 @@
 		<div class="col-lg-9 col-md-9 col-sm-9">
 			<div class="row">
 				<div class="col-lg-12">
-					<marquee><h4><a target="_blank" href="http://t.talk-fun.com/73jX">点我直达直播课，房间密码：222222</a></h4></marquee>
+					<marquee><h4><a target="_blank" href="<{$courseData.link}>"><{$courseData.board}></a></h4></marquee>
 				</div>
 				
 			</div>
 			<div class="row">
 				<div class="col-lg-12">
-					<volist name="courseSectionData" id="vo">
+					<volist name="courseSectionData" id="vo" key="index">
 						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="heading<{$vo.id}>">
@@ -60,7 +60,7 @@
 						        <a  role="button" data-toggle="collapse" data-parent="#accordion" href="#<{$vo.id}>" aria-expanded="true" aria-controls="collapse<{$vo.id}>">
 						          	<div class="row">
 						          		<div class="col-lg-6">
-						          			第<{$vo.id}>课 <{$vo.name}>
+						          			第<{$index}>课 <{$vo.name}>
 						          		</div>
 						          		<div class="col-lg-4 col-lg-offset-2">
 						          			<div class="progress" style="margin-bottom: 0px;">
