--- a/Home/Tpl/Train/showCourseTextbookPage.html
+++ b/Home/Tpl/Train/showCourseTextbookPage.html
@@ -2,15 +2,23 @@
 	<head>
 		<link rel="stylesheet" href="__PUBLIC__/reveal.js/css/reveal.css">
 		<link rel="stylesheet" href="__PUBLIC__/reveal.js/css/theme/moon.css">
+		<link rel="stylesheet" type="text/css" href="__PUBLIC__/css/ppt.css"/>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
 				<section>
+					<h1>C++</h1>
 					<h1>编程基础</h1>
-					<h3>陈学康</h3>
+					<h4 class="fragment">一码学程</h4>
 				</section>
-				<section>同学们开始上课</section>
+				<section data-transition="zoom">
+					<h4 class="tl">为什么要学习编程?</h4>
+					<h6 class="fragment tl">
+						“Everybody in this country should learn how to program a computer… because it teaches you how to think.” – Steve Jobs
+					</h6>
+					<img class="fragment" src="__PUBLIC__/img/qbs.png"/>
+				</section>
 				<section>同学们下课啦</section>
 			</div>
 		</div>
