--- a/Home/Tpl/Admin/showAddProblem.html
+++ b/Home/Tpl/Admin/showAddProblem.html
@@ -42,6 +42,12 @@
 			</div>
 			<div class="col-md-2">
 				<div class="form-group">
+			    	<label for="exampleInputEmail1">编号</label>
+			    	<input type="text" class="form-control" name="problem_mark" placeholder="A-001">
+			    </div>
+			</div>
+			<div class="col-md-2">
+				<div class="form-group">
 			    	<label for="exampleInputEmail1">标题</label>
 			    	<input type="text" class="form-control" name="title" >
 			    </div>
@@ -52,7 +58,7 @@
 			    	<input type="text" class="form-control" name="difficulty" >
 			    </div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-2">
 				<div class="form-group">
 			    	<label for="exampleInputEmail1">标签</label>
 			    	<input type="text" class="form-control" name="label" >
