--- a/Home/Tpl/Train/showCourseIndexPage.html
+++ b/Home/Tpl/Train/showCourseIndexPage.html
@@ -62,13 +62,13 @@
 						          		<div class="col-lg-6">
 						          			第<{$index}>课 <{$vo.name}>
 						          		</div>
-						          		<div class="col-lg-4 col-lg-offset-2">
+						          		<!--<div class="col-lg-4 col-lg-offset-2">
 						          			<div class="progress" style="margin-bottom: 0px;">
 											  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
 											     已观看90%
 											  </div>
 											</div>
-						          		</div>
+						          		</div>-->
 						          	</div>
 						          	
 						        </a>
@@ -81,7 +81,13 @@
 						      			<div class="col-lg-2">
 						      				<h5><{$index}>.<{$subindex}> <{$subvo.name}></h5>
 						      			</div>
-							      		<div class="col-lg-offset-8 col-lg-1" style="margin-top: 10px;">
+						      			<div class="col-lg-4" style="margin-top: 8px;">
+						      				<span>题目:</span>
+						      				<volist name="subvo.all_problem" id="pdata">
+						      					<span style="margin-left: 5px;"><a href="__APP__/Problem/showProblem/id/<{$pdata.problem_id}>" target="_blank"><{$pdata.mark}></a></span>
+						      				</volist>
+						      			</div>
+							      		<div class="col-lg-offset-4 col-lg-1" style="margin-top: 10px;">
 							      			<a href="__APP__/Train/showCourseTextbookPage/id/<{$subvo.ppt}>" target="_blank" title="第<{$vo.id}>课 <{$vo.name}>PPT"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a>
 							      		</div>
 							      		<div class="col-lg-1" style="margin-top: 10px;">
