--- a/Home/Tpl/Admin/showModifyProblem.html
+++ b/Home/Tpl/Admin/showModifyProblem.html
@@ -43,6 +43,12 @@
 			</div>
 			<div class="col-md-2">
 				<div class="form-group">
+			    	<label for="exampleInputEmail1">编号</label>
+			    	<input type="text" class="form-control" name="problem_mark" value="<{$data.problem_mark}>">
+			    </div>
+			</div>
+			<div class="col-md-2">
+				<div class="form-group">
 			    	<label for="exampleInputEmail1">标题</label>
 			    	<input type="text" class="form-control" name="title" value="<{$data.title}>" >
 			    </div>
@@ -53,10 +59,26 @@
 			    	<input type="text" class="form-control" name="difficulty" value="<{$data.difficulty}>" >
 			    </div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-2">
 				<div class="form-group">
 			    	<label for="exampleInputEmail1">标签</label>
-			    	<input type="text" class="form-control" name="label" value="<{$labelData}>">
+			    	<input type="text" class="form-control" name="label" value="<{$data.label}>">
+			    </div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="form-group">
+			    	<label for="exampleInputEmail1">解题思路</label>
+			    	<textarea class="form-control" rows="8" name="idea" ><{$data.idea}></textarea>
+			    </div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="form-group">
+			    	<label for="exampleInputEmail1">标程</label>
+			    	<textarea class="form-control" rows="8" name="stdexe"><{$data.stdexe}></textarea>
 			    </div>
 			</div>
 		</div>
