--- a/Home/Tpl/Problem/showProblemList.html
+++ b/Home/Tpl/Problem/showProblemList.html
@@ -6,7 +6,7 @@
 			<table  class="table table-bordered table-condensed table-striped  table-hover text-center">
 				<tr style="background-color:rgb(51,122,183);color: #FFFFFF;">
 					<th style="width: 7%;" class="text-center">状态</th>
-					<th style="width: 10%;" class="text-center">ID</th>
+					<!--<th style="width: 10%;" class="text-center">ID</th>-->
 					<th style="width: 10%;" class="text-center">编号</th>
 					<th style="text-align:left;" class="text-center">标题</th>
 					<th style="width: 18%;" class="text-center">难度</th>
@@ -24,7 +24,7 @@
 								</gt>
 							</eq>
 						</td>
-						<td><{$vo.id}> </td>
+						<!--<td><{$vo.id}> </td>-->
 						<td><{$vo.problem_mark}> </td>
 						<td style="text-align:left;"> <a href='__APP__/Problem/showProblem/id/<{$vo.id}>'> <{$vo.title}> </a> </td>
 						<td>
