--- a/Home/Tpl/Public/footer.html
+++ b/Home/Tpl/Public/footer.html
@@ -4,9 +4,9 @@
 						<hr>
 						<div class="row footer-bottom">
 				          <ul class="list-inline text-center">
-				            <li>CodeMao在线学习系统</li>
+				            <li>OneCode在线学习系统</li>
 				            <li>|</li>
-							<li>Copyright &copy; 2018-2018  author:CodeMao</li>
+							<li>Copyright &copy; 2018-2018  author:OneCode</li>
 				          </ul>
 				        </div>
 					</div>
