--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -8,16 +8,15 @@
 									<!-- Brand and toggle get grouped for better mobile display -->
 									<div class="navbar-header">
 
-									  	<img src="__PUBLIC__/img/codemao.jpg" alt="" width="150px" height="50px"/>
+									  	<img src="__PUBLIC__/img/onecode.png" alt="" width="150px" height="50px"/ style="margin-left: 50px;">
 
 									</div>
 									<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 									  <ul class="nav navbar-nav" style="font-size: 20px;">
 										<li><a href="__APP__/Index/index" style="color: #2c7e92;">首页</a></li>
-										
+										<li><a href="__APP__/Train/showCourseIndexPage" style="color: #2c7e92;">课程</a></li>
 										<li><a href="__APP__/Problem/showProblemList" style="color: #2c7e92;">题库</a></li>
 										<li><a href="__APP__/Judge/showRealTimeEvaluation" style="color: #2c7e92;">状态</a></li>
-									  	<li><a href="__APP__/Train/showCourseIndexPage" style="color: #2c7e92;">课程</a></li>
 									  	<li><a href="__APP__/User/showAllUserRank" style="color: #2c7e92;">排行榜</a></li>
 									  </ul>
 									  
