--- a/Home/Tpl/Problem/showVideo.html
+++ b/Home/Tpl/Problem/showVideo.html
@@ -20,11 +20,12 @@
     </head>
     <body>
         <!-- 设置播放器容器 -->
-		<div class="row">
+        <div class="row">
         	<div class="col-lg-8 col-lg-offset-2">
         		<video id="player-container-id" preload="auto" style="width: 100%;height: 600px;"  playsinline webkit-playinline x5-playinline></video>
         	</div>
-        </div>        <!--
+        </div>
+        <!--
         注意事项：
         * 播放器容器必须为 video 标签
         * player-container-id 为播放器容器的ID，可自行设置
@@ -33,8 +34,8 @@
         -->
         <script>
             var player = TCPlayer("player-container-id", { // player-container-id 为播放器容器ID，必须与html中一致
-                fileID: "<{$courseSectionData.file_id}>", // 请传入需要播放的视频filID 必须
-                appID: "<{$courseSectionData.app_id}>", // 请传入点播账号的appID 必须
+                fileID: "<{$problemData.file_id}>", // 请传入需要播放的视频filID 必须
+                appID: "<{$problemData.app_id}>", // 请传入点播账号的appID 必须
                 autoplay: false //是否自动播放
                 //其他参数请在开发文档中查看
             });
