--- a/Home/Tpl/Train/showCourseIndexPage.html
+++ b/Home/Tpl/Train/showCourseIndexPage.html
@@ -6,7 +6,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12">
 					<div class="panel panel-default">
 					  <div class="panel-body">
-					  	<img src="<{$courseData.course_pic}>"/ width="205px">
+					  	<img src="<{$courseData.course_pic}>"/ width="250px" height="130px">
 					  </div>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 					  <div class="panel-body">
 					  		<div class="row">
 					  			<div class="col-lg-6 col-md-6 col-sm-6">
-									<img src="<{$courseData.teacher_avater}>"/ width="100" height="120">
+									<img src="<{$courseData.teacher_avater}>"/ width="120" height="130">
 								</div>	
 								<div class="col-lg-6 col-md-6 col-sm-6">
 									<ul class="list-group">
@@ -46,7 +46,7 @@
 		<div class="col-lg-9 col-md-9 col-sm-9">
 			<div class="row">
 				<div class="col-lg-12">
-					<marquee><h4><a target="_blank" href="<{$courseData.link}>"><{$courseData.board}></a></h4></marquee>
+					<h4 class="text-center" ><a target="_blank" href="<{$courseData.link}>" style="color: red;"><{$courseData.board}></a></h4>
 				</div>
 				
 			</div>
