--- a/Home/Tpl/Train/showCourseIndexPage.html
+++ b/Home/Tpl/Train/showCourseIndexPage.html
@@ -6,7 +6,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12">
 					<div class="panel panel-default">
 					  <div class="panel-body">
-					  	<img src="<{$courseData.course_pic}>"/ width="250px" height="130px">
+					  	<img src="<{$courseData.course_pic}>"/ width="100%" height="130px">
 					  </div>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 					  <div class="panel-body">
 					  		<div class="row">
 					  			<div class="col-lg-6 col-md-6 col-sm-6">
-									<img src="<{$courseData.teacher_avater}>"/ width="120" height="130">
+									<img src="<{$courseData.teacher_avater}>"/ width="100%" height="130">
 								</div>	
 								<div class="col-lg-6 col-md-6 col-sm-6">
 									<ul class="list-group">
