--- a/Home/Tpl/Index/index.html
+++ b/Home/Tpl/Index/index.html
@@ -8,50 +8,41 @@
 			  </div>
 			</div>
 			<hr />
-				<div class="product_big mt30 pb10">
-				    <div class="product_content">
-				        <div>
-				            <p style="color: #333333; font: bold 29px 'STXingkai'; text-align: center; margin: 5px auto;">
-				                	为什么要学编程？
-				            </p>
-				            <div class="clear"></div>
-				        </div>
-				    </div>
+			<div class="text-center">
+			    <div class="product_content">
+			        <div>
+			            <p style="color: #333333; font: bold 29px 'STXingkai'; text-align: center; margin: 5px auto;">
+			                	为什么要学编程？
+			            </p>
+			            <div class="clear"></div>
+			        </div>
+			    </div>
+			</div>
+			<hr />
+			<div class="row">
+				<div class="col-lg-10 col-lg-offset-1">
+					<div class="row ">
+						<div class="col-lg-4 text-center">
+							<img  src="__PUBLIC__/img/test.png" width="85px" height="85px">
+							<p style="font-size:18px; color:#1999d7; line-height:30px;margin-top: 30px;">会思考</p>
+							<p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">掌握计算机严谨的编程思想</p>
+				            <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">思考问题，分析问题，解决问题</p>
+						</div>
+						<div class="col-lg-4 text-center">
+							<img src="__PUBLIC__/img/test1.png" width="85px" height="85px">
+		                    <p style="font-size:18px; color:#1999d7; line-height:30px;margin-top: 30px;">开心学</p>
+							<p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">兴趣启蒙，潜力发掘</p>
+				            <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">边学边玩，寓教于乐</p>
+						</div>
+						<div class="col-lg-4 text-center">
+							<img src="__PUBLIC__/img/test2.png" width="85px" height="85px">
+		                    <p style="font-size:18px; color:#1999d7; line-height:30px;margin-top: 30px;">我领先</p>
+							<p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">适应人工智能时代，接触最新科技</p>
+				            <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">编程逐渐纳入基础教育，为升学加码</p>
+						</div>
+					</div>
 				</div>
-				<hr />
-				<div class="mt20 mb40" style="width:100%; margin:0 auto;">
-				    <div style="width:1200px; margin:0 auto;">
-				        <ul style="list-style-type: none;">
-				            <li style="float:left; width:236px;height:250px;margin: 0 75px;" >
-				                <img src="__PUBLIC__/img/test.png" width="85px" height="85px"/ style="margin-left: 70px;margin-bottom: 20px;">
-				                <div class="mt10">
-				                    <span style="font-size:18px; color:#1999d7; line-height:30px;margin-left: 80px;">会思考</span>
-				                    <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">掌握计算机严谨的编程思想</p>
-				                    <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">思考问题，分析问题，解决问题</p>
-				                </div>
-				            </li>
-				            <li class="ml35 mr35" style="float:left; width:236px;height:250px;margin: 0 75px;">
-				                <img src="__PUBLIC__/img/test1.png" width="85px" height="85px"/ style="margin-left: 70px;margin-bottom: 20px;">
-				                <div class="mt10">
-				                    <span style="font-size:18px; color:#1999d7; line-height:30px;margin-left: 85px;">开心学</span>
-				                    <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">兴趣启蒙，潜力发掘</p>
-				                    <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">边学边玩，寓教于乐</p>
-				                </div>
-				            </li>
-				            <li style="float:left; width:236px;height:250px;margin: 0 75px;">
-				                <img src="__PUBLIC__/img/test2.png" width="85px" height="85px"/  style="margin-left: 70px;margin-bottom: 20px;">
-				                <div class="mt10">
-				                    <span style="font-size:18px; color:#1999d7; line-height:30px;margin-left: 85px;">我领先</span>
-				                    <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px; ">适应人工智能时代，接触最新科技</p>
-				                    <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px; ">编程逐渐纳入基础教育，为升学加码</p>
-				
-				                </div>
-				            </li>
-				            
-				        </ul>
-				    </div>
-				</div>
-
+			</div>
 		</div>
 	</div>
 </block>
