--- a/Home/Tpl/Problem/showProblem.html
+++ b/Home/Tpl/Problem/showProblem.html
@@ -172,7 +172,7 @@
 					      </div>
 					      <div class="modal-footer">
 					        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-					        <button type="button" class="btn btn-default" data-dismiss="modal" onclick="showtips1()">确定</button>
+					        <button type="button" class="btn btn-default"  onclick="showtips1()">确定</button>
 					      </div>
 					    </div>
 					  </div>
@@ -197,7 +197,7 @@
 					      </div>
 					      <div class="modal-footer">
 					        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-					        <button type="button" class="btn btn-default" data-dismiss="modal" onclick="showtips2()">确定</button>
+					        <button type="button" class="btn btn-default" onclick="showtips2()">确定</button>
 					      </div>
 					    </div>
 					  </div>
