--- a/Home/Tpl/Train/showCourseIndexPage.html
+++ b/Home/Tpl/Train/showCourseIndexPage.html
@@ -90,10 +90,10 @@
 						      				</volist>
 						      			</div>
 							      		<div class="col-lg-1" style="margin-top: 10px;">
-							      			<a href="__APP__/Train/showCourseTextbookPage/id/<{$subvo.ppt}>" target="_blank" title="第<{$vo.id}>课 <{$vo.name}>PPT"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a>
+							      			<a href="__APP__/Train/showCourseTextbookPage/id/<{$subvo.ppt}>" target="_blank" title="第<{$index}>.<{$subindex}>课 <{$subvo.name}>PPT"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a>
 							      		</div>
 							      		<div class="col-lg-1" style="margin-top: 10px;">
-							      			<a href="__APP__/Train/showCourseVideoPage/id/<{$subvo.id}>" target="_blank" title="第<{$vo.id}>课 <{$vo.name}>视频"><span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span></a>
+							      			<a href="__APP__/Train/showCourseVideoPage/id/<{$subvo.id}>" target="_blank" title="第<{$index}>.<{$subindex}>课 <{$subvo.name}>视频"><span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span></a>
 							      		</div>
 							      		
 							      	</div>
