--- a/Home/Tpl/Problem/showProblem.html
+++ b/Home/Tpl/Problem/showProblem.html
@@ -356,7 +356,7 @@
 			                         
 			                      }
 			         });
-			document.getElementById('tips1').innerHTML="<h3>锦囊1内容：<{$problemData.label}><h3>";
+			document.getElementById('tips1').innerHTML="<h3>锦囊1内容：<{$problemData.label}></h3>";
 			
 		}
 		function showtips2()
@@ -372,7 +372,7 @@
 			                         
 			                      }
 			         });
-			document.getElementById('tips2').innerHTML="<h3 class='text-center'>锦囊2内容<h3><h6><{$problemData.idea}></h6>";
+			document.getElementById('tips2').innerHTML="<h3 class='text-center'>锦囊2内容</h3><h6><{$problemData.idea}></h6>";
 			
 		}
 		function showtips3()
