--- a/Home/Tpl/TrainAdmin/showCourseSubSectionPage.html
+++ b/Home/Tpl/TrainAdmin/showCourseSubSectionPage.html
@@ -40,6 +40,10 @@
 								<input type="text" class="form-control" placeholder="视频FileID" name="file_id" value=<{$vo.file_id}>  >
 							  	</div>
 							  	<div class="form-group">
+								    <label for="exampleInputEmail1">视频回放地址</label>
+								<input type="text" class="form-control" placeholder="视频回放地址" name="video_address" value=<{$vo.video_address}>  >
+							  	</div>
+							  	<div class="form-group">
 								    <label for="exampleInputEmail1">题目</label>
 								<input type="text" class="form-control" placeholder="题目" name="all_problem" value=<{$vo.all_problem}>  >
 							  	</div>
@@ -110,6 +114,10 @@
 							  	<div class="form-group">
 								    <label for="exampleInputEmail1">视频FileID</label>
 								<input type="text" class="form-control" placeholder="视频FileID" name="file_id" value=<{$vo.file_id}>  >
+							  	</div>
+						  		<div class="form-group">
+								    <label for="exampleInputEmail1">视频回放地址</label>
+								<input type="text" class="form-control" placeholder="视频回放地址" name="video_address" value=<{$vo.video_address}>  >
 							  	</div>
 							  	<div class="form-group">
 								    <label for="exampleInputEmail1">题目</label>
