--- a/Home/Tpl/Judge/showRealTimeEvaluation.html
+++ b/Home/Tpl/Judge/showRealTimeEvaluation.html
@@ -9,8 +9,8 @@
 		<div class="col-md-12">
 			<form action="__APP__/Judge/showRealTimeEvaluation" class="form-inline" role="form" method="post"> 
 				<div class="form-group">
-			    	<label for="exampleInputName2">问题ID</label>
-			   		<input type="text" name="problemId" class="form-control" placeholder="问题ID" value="<{$pid}>"/>	
+			    	<label for="exampleInputName2">编号</label>
+			   		<input type="text" name="problemId" class="form-control" placeholder="A-001" value="<{$pid}>"/>	
 				</div>
 				<div class="form-group">
 			    	<label for="exampleInputName2">昵称</label>
@@ -53,7 +53,7 @@
 				<tr style="background-color:rgb(204,204,255)">
 					<th class="text-center">运行ID</th>
 					<th class="text-center">昵称</th>
-					<th class="text-center">问题ID</th>
+					<th class="text-center">问题编号</th>
 					<th class="text-center">评测结果</th>
 					<th class="text-center">运行时间</th>
 					<th class="text-center">运行内存</th>
@@ -78,7 +78,7 @@
 						</td>
 						<td>
 							<a href="__APP__/Problem/showProblem/id/<{$vo.problem_id}>">
-							<{$vo.problem_id}>
+							<{$vo.problem_mark}>
 							</a>
 						</td>
 						<td>
