--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -18,6 +18,7 @@
 										<li><a href="__APP__/Problem/showProblemList" style="color: #2c7e92;">题库</a></li>
 										<li><a href="__APP__/Judge/showRealTimeEvaluation" style="color: #2c7e92;">状态</a></li>
 									  	<li><a href="__APP__/User/showAllUserRank" style="color: #2c7e92;">排行榜</a></li>
+									  	<li><a href="http://playground.onecode.com.cn/" style="color: #2c7e92;">在线IDE</a></li>
 									  </ul>
 									  
 									  <ul class="nav navbar-nav navbar-right">
