--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -18,7 +18,9 @@
 										<li><a href="__APP__/Problem/showProblemList" style="color: #2c7e92;">题库</a></li>
 										<li><a href="__APP__/Judge/showRealTimeEvaluation" style="color: #2c7e92;">状态</a></li>
 									  	<li><a href="__APP__/User/showAllUserRank" style="color: #2c7e92;">排行榜</a></li>
-									  	<li><a href="http://playground.onecode.com.cn/" style="color: #2c7e92;">在线IDE</a></li>
+									  	<eq name="loginStatus" value="1">
+									  	<li><a href="http://playground.onecode.com.cn/" target="_blank" style="color: #2c7e92;">IDE</a></li>
+									  	</eq>
 									  </ul>
 									  
 									  <ul class="nav navbar-nav navbar-right">
