--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -36,6 +36,7 @@
 													<li><a href="__APP__/User/showModifyUserMessage/id/<{$userinfoData.id}>"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;修改信息</a></li>
 													<li><a href="__APP__/User/showModifyPassword/id/<{$userinfoData.id}>"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;修改密码</a></li>
 													<gt name="userinfoData.root" value="1">
+													<li><a href="__APP__/Admin/showUserSolveProblemPage"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;做题统计</a></li>	
 													<li><a href="__APP__/Admin/showAddUserPage"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;新增用户</a></li>
 													<li><a href="__APP__/Admin/showProblemLibrary"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;题目管理</a></li>
 													<li><a href="__APP__/Admin/showLoginMessage"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;登录管理</a></li>
