--- a/Home/Tpl/Admin/showUserSolveProblemPage.html
+++ b/Home/Tpl/Admin/showUserSolveProblemPage.html
@@ -53,11 +53,11 @@
 					<volist name="allUserData" id="vo" mod="6" >
 							
 								<eq name="vo.status" value="0">
-									<td style="background-color: green;">
+									<td style="background-color: #98FB98;">
 										<{$vo.username}>
 									</td>
 									<else/>
-									<td style="background-color: red;">
+									<td style="background-color: #FFE4E1;">
 										<{$vo.username}>
 									</td>
 								</eq>
