--- a/Home/Tpl/Train/showCourseIndexPage.html
+++ b/Home/Tpl/Train/showCourseIndexPage.html
@@ -89,14 +89,16 @@
 						      					<span style="margin-left: 5px;"><a href="__APP__/Problem/showProblem/id/<{$pdata.problem_id}>" target="_blank"><{$pdata.mark}></a></span>
 						      				</volist>
 						      			</div>
-							      		<!--<div class="col-lg-1" style="margin-top: 10px;">
+						      			<!--|
+							      		<div class="col-lg-1" style="margin-top: 10px;">
 							      			<a href="__APP__/Train/showCourseTextbookPage/id/<{$subvo.ppt}>" target="_blank" title="第<{$index}>.<{$subindex}>课 <{$subvo.name}>PPT"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a>
 							      		</div>-->
 							      		<div class="col-lg-1" style="margin-top: 10px;">
 							      			<eq name="subvo.is_show" value="1">
 							      				<a href="__APP__/Train/showCourseVideoPage/id/<{$subvo.id}>" target="_blank" title="第<{$index}>.<{$subindex}>课 <{$subvo.name}>视频"><span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span></a>							      			
+							      				|
 							      			</eq>
-											<!--<a href="<{$subvo.video_address}>" target="_blank" title="第<{$index}>.<{$subindex}>课 <{$subvo.name}>视频"><span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span></a>-->
+											<a href="<{$subvo.video_address}>" target="_blank" title="第<{$index}>.<{$subindex}>课 <{$subvo.name}>欢拓视频"><span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span></a>
 							      		</div>
 							      		
 							      	</div>
