--- a/Home/Tpl/ExamAdmin/index.html
+++ b/Home/Tpl/ExamAdmin/index.html
@@ -24,6 +24,7 @@
 				</div>
 				<div class="col-md-4">
 					<a href="__APP__/ExamAdmin/showAddExam" class="btn btn-default">新增比赛</a>
+					<a href="__APP__/ExamAdmin/modifyBug" class="btn btn-default">更新bug</a>
 				</div>
 			</form>
 	</div>
