--- a/Home/Tpl/ExamAdmin/showAddExam.html
+++ b/Home/Tpl/ExamAdmin/showAddExam.html
@@ -48,7 +48,7 @@
 				<div class="col-md-2">
 					<div class="form-group">
 				    	<label for="exampleInputName2">密码</label>
-				   		<input type="password" name="passwor" class="form-control" placeholder="密码" value="<{$ant}>"/>
+				   		<input type="password" name="password" class="form-control" placeholder="密码" value="<{$ant}>"/>
 					</div>
 				</div>
 			</div>
