--- a/Home/Tpl/ExamAdmin/showModifyExamPage.html
+++ b/Home/Tpl/ExamAdmin/showModifyExamPage.html
@@ -49,7 +49,7 @@
 				<div class="col-md-2">
 					<div class="form-group">
 				    	<label for="exampleInputName2">密码</label>
-				   		<input type="text" name="passwor" class="form-control" placeholder="密码" value="<{$contestData.password}>"/>
+				   		<input type="text" name="password" class="form-control" placeholder="密码" value="<{$contestData.password}>"/>
 					</div>
 				</div>
 			</div>
