--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -17,6 +17,7 @@
 										<li><a href="__APP__/Train/showCourseIndexPage" style="color: #2c7e92;">课程</a></li>
 										<li><a href="__APP__/Problem/showProblemList" style="color: #2c7e92;">题库</a></li>
 										<li><a href="__APP__/Judge/showRealTimeEvaluation" style="color: #2c7e92;">状态</a></li>
+										<li><a href="__APP__/Exam/index" style="color: #2c7e92;">比赛</a></li>
 									  	<li><a href="__APP__/User/showAllUserRank" style="color: #2c7e92;">排行榜</a></li>
 									  	<eq name="loginStatus" value="1">
 									  	<li><a href="http://playground.onecode.com.cn/" target="_blank" style="color: #2c7e92;">IDE</a></li>
@@ -42,6 +43,7 @@
 													<li><a href="__APP__/Admin/showLoginMessage"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;登录管理</a></li>
 													<li><a href="__APP__/Admin/showUserMessage"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;&nbsp;用户管理</a></li>
 													<li><a href="__APP__/TrainAdmin/showTrainAdminIndexPage"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;&nbsp;课程管理</a></li>
+													<li><a href="__APP__/ExamAdmin/index"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;&nbsp;比赛管理</a></li>
 													</gt>
 													<li><a href="__APP__/User/logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;&nbsp;退出登录</a></li>
 													<li role="separator" class="divider"></li>
