--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -36,6 +36,9 @@
 													<li><a href="__APP__/User/showUserMessage/id/<{$userinfoData.id}>"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;我的信息</a></li>
 													<li><a href="__APP__/User/showModifyUserMessage/id/<{$userinfoData.id}>"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;修改信息</a></li>
 													<li><a href="__APP__/User/showModifyPassword/id/<{$userinfoData.id}>"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;修改密码</a></li>
+													<gt name="userinfoData.root" value="0">
+													<li><a href="__APP__/Admin/showStudentFeedbackPage"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;学生反馈</a></li>	
+													</gt>
 													<gt name="userinfoData.root" value="1">
 													<li><a href="__APP__/Admin/showUserSolveProblemPage"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;做题统计</a></li>	
 													<li><a href="__APP__/Admin/showAddUserPage"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;新增用户</a></li>
