add a user group

--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -47,6 +47,7 @@
 													<li><a href="__APP__/Admin/showUserMessage"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;&nbsp;用户管理</a></li>
 													<li><a href="__APP__/TrainAdmin/showTrainAdminIndexPage"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;&nbsp;课程管理</a></li>
 													<li><a href="__APP__/ExamAdmin/index"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;&nbsp;比赛管理</a></li>
+													<li><a href="__APP__/Admin/showUserClassPage"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;&nbsp;班级管理</a></li>
 													</gt>
 													<li><a href="__APP__/User/logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;&nbsp;退出登录</a></li>
 													<li role="separator" class="divider"></li>
