--- a/Home/Tpl/Index/index.html
+++ b/Home/Tpl/Index/index.html
@@ -4,7 +4,16 @@
 		<div class="col-lg-12">
 			<div class="panel panel-info">
 			  <div class="panel-body">
-			  	<h4 style="margin-left: 80px;"><a href="<{$courseData.link}>">进入直播课</a></h4>
+					<div class="row">
+						<div class="col-lg-6">
+							<h4 class="text-left"><a href="<{$courseData.link}>">进入直播课</a></h4>
+						</div>
+						<div class="col-lg-6">
+							<h4 class="text-right"><a href="<{$courseData.assistant_link}>">助手直播室</a></h4>
+						</div>
+					</div>
+			  	
+					
 			  </div>
 			</div>
 			<hr />
