--- a/Home/Tpl/TrainAdmin/showModifyCoursePage.html
+++ b/Home/Tpl/TrainAdmin/showModifyCoursePage.html
@@ -45,6 +45,12 @@
 				<input type="text" class="form-control"  name="link" value=<{$courseData.link}>>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<h4>助手直播室的链接</h4>
+				<input type="text" class="form-control"  name="assistant_link" value=<{$courseData.assistant_link}>>
+			</div>
+		</div>
 		<div class="row" style="margin-top: 20px;">
 			<div class="col-lg-12  text-center">
 				<input class="btn btn-primary btn-lg btn-block" type="submit"  value="提交" />
